--- a/style.css
+++ b/style.css
@@ -136,11 +136,13 @@ footer {
 
 @media (max-width: 768px) {
   .navbar {
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
+    gap: 10px;
   }
-
+  
   nav ul {
+    padding: 20px;
     flex-direction: column;
     gap: 10px;
     margin-top: 10px;
